add: adding security for new api endpoints